# cnn-cbir-benchmark

./: README.md  r-mac.py
crow_retrieval/: README.md
crow_retrieval/cpp/: CMakeLists.txt  README.MD  extract_feature_bk.cpp  extract_feature_multi.cpp
crow_retrieval/src/: brute.py  crow.py  extract_features.py  oxford5k_feats_extract.py  spatial_weight_map.py  visualize_heatmap.py
data/: oxford.txt
fc_retrieval/: README.md
fc_retrieval/model/: pool5.prototxt  pool5_neural.prototxt
fc_retrieval/src/: brute.py  extract_features.py  oxford5k_feats_extract.py
fc_retrieval/tools/: compute_ap  compute_ap.cpp
fv_retrieval/: README.md
fv_retrieval/src/: brute.py  extract_covdet.py  extract_hesaff.py  extract_opencvsift.py  extract_sosnet.py  fv.py  gmm.py
fv_retrieval/src_cpp/sift_pca/: BinaryCvMat.h  CMakeLists.txt  base_utils.hpp  opencv_utils.hpp  pca_utils.cc  pca_utils.h  sifts_pca_train.cpp
rmac_retrieval/: README.md  rmac.py
rmac_retrieval/src/: brute.py  extract_features.py  oxford5k_feats_extract.py  rmac.py
vlad_retrieval/: README.md
vlad_retrieval/src/: brute.py  kmeans.py  vlad.py
